--- a/MiniPoll/app/src/main/res/layout/show_aide.xml
+++ b/MiniPoll/app/src/main/res/layout/show_aide.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/option2"
+            android:id="@+id/option1"
             android:layout_width="181dp"
             android:layout_height="23dp"
             android:layout_marginEnd="8dp"
@@ -21,50 +21,50 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="52dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toStartOf="@+id/editText3"
+            android:text="Option 1:"
+            app:layout_constraintEnd_toStartOf="@+id/editText1"
             app:layout_constraintHorizontal_bias="0.547"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/descrAide" />
 
         <TextView
-            android:id="@+id/option3"
+            android:id="@+id/option2"
             android:layout_width="181dp"
             android:layout_height="23dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="96dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toStartOf="@+id/editText3"
+            android:layout_marginTop="66dp"
+            android:text="Option 2:"
+            app:layout_constraintEnd_toStartOf="@+id/editText2"
             app:layout_constraintHorizontal_bias="0.509"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descrAide" />
+            app:layout_constraintTop_toBottomOf="@+id/option1" />
 
         <TextView
             android:id="@+id/descrAide"
             android:layout_width="311dp"
-            android:layout_height="94dp"
+            android:layout_height="64dp"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:text="Aide à un ami"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <EditText
-            android:id="@+id/editText3"
+            android:id="@+id/editText1"
             android:layout_width="126dp"
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="60dp"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,11 +76,11 @@
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="62dp"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descrAide" />
+            app:layout_constraintTop_toBottomOf="@+id/editText1" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
