--- a/MiniPoll/app/src/main/res/layout/activity_consulter_profil.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_consulter_profil.xml
@@ -9,7 +9,7 @@
     tools:context="lsinf1225.mini_poll.activity.ConsulterProfilActivity">
 
     <ImageView
-        android:id="@+id/picture"
+        android:id="@+id/my_profile_picture"
         android:layout_width="196dp"
         android:layout_height="200dp"
         android:src="@android:drawable/ic_menu_camera"
@@ -28,7 +28,7 @@
         android:text="@string/app_user_username"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/picture" />
+        app:layout_constraintTop_toBottomOf="@+id/my_profile_picture" />
 
     <Button
         android:id="@+id/change_username_btn"
@@ -46,6 +46,32 @@
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <TextView
+        android:id="@+id/password_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:padding="@dimen/default_padding"
+        android:text="@string/my_profile_mdp"
+        app:layout_constraintTop_toBottomOf="@+id/change_username_btn" />
+
+    <Button
+        android:id="@+id/change_password_btn"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:onClick="changePassword"
+        android:textColor="@color/helpBlue"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        android:text="@string/my_profile_change_password"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_title" />
+
+    <TextView
         android:id="@+id/surname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,7 +80,7 @@
         android:layout_marginStart="10dp"
         android:padding="@dimen/default_padding"
         android:text="@string/app_user_surname"
-        app:layout_constraintTop_toBottomOf="@+id/change_username_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/change_password_btn" />
 
     <TextView
         android:id="@+id/firstname"
@@ -78,19 +104,15 @@
         android:text="@string/app_user_surname"
         app:layout_constraintTop_toBottomOf="@+id/firstname" />
 
-    <Button
-        android:id="@+id/change_password_btn"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/bff"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:onClick="changePassword"
-        android:textColor="@color/helpBlue"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        android:text="@string/my_profile_change_password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:padding="@dimen/default_padding"
+        android:text="@string/app_user_bff"
         app:layout_constraintTop_toBottomOf="@+id/mail" />
 
 </android.support.constraint.ConstraintLayout>
