--- a/MiniPoll/app/src/main/res/layout/activity_consulter_profil.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_consulter_profil.xml
@@ -1,118 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+tools:context="lsinf1225.mini_poll.activity.ConsulterProfilActivity">
+
+<ImageView
+    android:id="@+id/my_profile_picture"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:layout_gravity="center_horizontal"
+    android:src="@android:drawable/ic_menu_camera"
+    android:contentDescription="@string/my_profile_picture"
+    android:layout_marginTop="20dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent" />
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="lsinf1225.mini_poll.activity.ConsulterProfilActivity">
+    android:layout_marginTop="220dp"
+    android:layout_alignParentBottom="true" >
 
-    <ImageView
-        android:id="@+id/my_profile_picture"
-        android:layout_width="196dp"
-        android:layout_height="200dp"
-        android:src="@android:drawable/ic_menu_camera"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/username"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:padding="@dimen/default_padding"
-        android:text="@string/app_user_username"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_profile_picture" />
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/change_username_btn"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:onClick="changeUsername"
-        android:textColor="@color/helpBlue"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        android:text="@string/my_profile_change_username"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:padding="@dimen/default_padding"
+            android:text="@string/app_user_username"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_profile_picture" />
 
-    <TextView
-        android:id="@+id/password_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:padding="@dimen/default_padding"
-        android:text="@string/my_profile_mdp"
-        app:layout_constraintTop_toBottomOf="@+id/change_username_btn" />
+        <Button
+            android:id="@+id/change_username_btn"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="changeUsername"
+            android:textColor="@color/helpBlue"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            android:text="@string/my_profile_change_username"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/username" />
 
-    <Button
-        android:id="@+id/change_password_btn"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:onClick="changePassword"
-        android:textColor="@color/helpBlue"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        android:text="@string/my_profile_change_password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_title" />
+        <TextView
+            android:id="@+id/password_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:padding="@dimen/default_padding"
+            android:text="@string/my_profile_mdp"
+            app:layout_constraintTop_toBottomOf="@+id/change_username_btn" />
 
-    <TextView
-        android:id="@+id/surname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:padding="@dimen/default_padding"
-        android:text="@string/app_user_surname"
-        app:layout_constraintTop_toBottomOf="@+id/change_password_btn" />
+        <Button
+            android:id="@+id/change_password_btn"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="changePassword"
+            android:textColor="@color/helpBlue"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            android:text="@string/my_profile_change_password"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_title" />
 
-    <TextView
-        android:id="@+id/firstname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:padding="@dimen/default_padding"
-        android:text="@string/app_user_surname"
-        app:layout_constraintTop_toBottomOf="@+id/surname" />
+        <TextView
+            android:id="@+id/surname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:padding="@dimen/default_padding"
+            android:text="@string/app_user_surname"
+            app:layout_constraintTop_toBottomOf="@+id/change_password_btn" />
 
-    <TextView
-        android:id="@+id/mail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:padding="@dimen/default_padding"
-        android:text="@string/app_user_surname"
-        app:layout_constraintTop_toBottomOf="@+id/firstname" />
+        <TextView
+            android:id="@+id/firstname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:padding="@dimen/default_padding"
+            android:text="@string/app_user_firstname"
+            app:layout_constraintTop_toBottomOf="@+id/surname" />
 
-    <TextView
-        android:id="@+id/bff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:padding="@dimen/default_padding"
-        android:text="@string/app_user_bff"
-        app:layout_constraintTop_toBottomOf="@+id/mail" />
+        <TextView
+            android:id="@+id/mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:padding="@dimen/default_padding"
+            android:text="@string/app_user_mail"
+            app:layout_constraintTop_toBottomOf="@+id/firstname" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/bff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:padding="@dimen/default_padding"
+            android:text="@string/app_user_bff"
+            app:layout_constraintTop_toBottomOf="@+id/mail" />
+
+    </LinearLayout>
+
+</ScrollView>
+
+</RelativeLayout>
