--- a/MiniPoll/app/src/main/res/layout/activity_create.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_create.xml
@@ -4,40 +4,46 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/CreateLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="lsinf1225.mini_poll.activity.CreationActivity">
 
     <Button
         android:id="@+id/create_agreement_btn"
+        style="@style/main_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="140dp"
         android:onClick="createAgreement"
         android:text="@string/create_main_survey_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/create_questionnary_btn"
+        style="@style/main_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:onClick="createQuestionnary"
-        android:text="@string/create_main_survey_title"
+        android:text="@string/create_main_questionnary_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_agreement_btn" />
 
     <Button
         android:id="@+id/create_help_btn"
+        style="@style/main_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:onClick="createHelp"
-        android:text="@string/create_main_survey_title"
+        android:text="@string/create_main_help_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_questionnary_btn" />
