--- a/MiniPoll/app/src/main/res/layout/activity_creation_help_txt.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_creation_help_txt.xml
@@ -4,61 +4,53 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/CreateHelpFriendLayout"
+    android:id="@+id/CreateHelpTxtLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="lsinf1225.mini_poll.activity.CreationAideActivity" >
+    tools:context="lsinf1225.mini_poll.activity.CreationAideTxtActivity" >
 
     <TextView
-        android:id="@+id/create_help_friend_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:text="@string/create_help_friends_title"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Spinner
-        android:id="@+id/create_help_friend_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:prompt="@string/app_user_username"
-        android:spinnerMode="dropdown"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_help_friend_txt" />
-
-    <TextView
-        android:id="@+id/create_help_format_txt"
+        android:id="@+id/create_help_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:text="@string/create_format_title"
+        android:text="@string/create_help_answers_title"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        app:layout_constraintTop_toTopOf="@+id/create_help_friend_spinner" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/create_help_format_spinner"
+    <EditText
+        android:id="@+id/create_help_txt_proposal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:prompt="@string/app_user_username"
-        android:spinnerMode="dropdown"
+        android:layout_marginTop="80dp"
+        android:hint="@string/create_help_answers_proposal"
+        android:imeActionLabel="@string/create_help_answers_proposal"
+        android:imeOptions="actionDone"
+        android:inputType="text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_help_format_txt" />
+        app:layout_constraintTop_toTopOf="@+id/create_help_txt" />
+
+    <EditText
+        android:id="@+id/create_help_txt_proposal2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"
+        android:hint="@string/create_help_answers_proposal2"
+        android:imeActionLabel="@string/create_help_answers_proposal2"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/create_help_txt_proposal" />
 
     <Button
-        android:id="@+id/create_help_f_btn"
+        android:id="@+id/create_help_txt_btn"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,6 +61,6 @@
         android:onClick="next"
         android:text="@string/app_next"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_help_format_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/create_help_txt_proposal2" />
 
 </android.support.constraint.ConstraintLayout>
