--- a/MiniPoll/app/src/main/res/layout/activity_main.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MainLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="lsinf1225.mini_poll.activity.MainActivity">
