--- a/MiniPoll/app/src/main/res/layout/activity_create_profile.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_create_profile.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/create_name" />
 
     <EditText
-        android:id="@+id/create_confirm"
+        android:id="@+id/create_mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -67,7 +67,7 @@
         android:text="@string/create_picture"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_confirm" />
+        app:layout_constraintTop_toBottomOf="@+id/create_mail" />
 
     <Button
         android:id="@+id/create_next_btn"
@@ -85,16 +85,16 @@
 
     <TextView
         android:id="@+id/create_advice"
+        style="@style/error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:ems="10"
-        android:textColor="#FF0000"
         android:text="@string/create_advice"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/create_next_btn" />
 
 </android.support.constraint.ConstraintLayout>
