--- a/MiniPoll/app/src/main/res/values/styles.xml
+++ b/MiniPoll/app/src/main/res/values/styles.xml
@@ -38,4 +38,8 @@
         <item name="android:layout_gravity">left|center_vertical</item>
     </style>
 
+    <style name="error">
+        <item name="android:textColor">@color/colorError</item>
+    </style>
+
 </resources>
